# EMS-Ziyp-app

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  exeptions.py  pyproject.toml  requirements.txt
app/: .env.example  .gitignore  Dockerfile  app.sh  exeptions.py  pyproject.toml  requirements.txt
app/application_events/: models.py  services.py
app/application_grands/: routers.py  services.py
app/base/: base_schema.py
app/categories/: routers.py  services.py
app/cities/: models.py  routers.py  (+2 more)
application_events/: models.py  routers.py  schemas.py  services.py
application_grands/: models.py  routers.py  schemas.py  services.py
aws_media/: routers.py  services.py
base/: base_service.py
categories/: models.py  routers.py  schemas.py
cities/: models.py  routers.py  schemas.py
config/: main.py  settings.py
cron/: Dockerfile  send_request.sh  tasks.py
events/: models.py  routers.py  schemas.py  services.py
faqs/: models.py  routers.py  schemas.py  services.py
grands/: models.py  routers.py  schemas.py  services.py
news/: models.py  routers.py  schemas.py  services.py
notification/: firebase_notification.py  models.py  services.py  sms_notification.py  ziyo-app-31b68-firebase-adminsdk-b5m2u-15606366ff.json  ziyo-app-firebase-adminsdk-o5x20-92b88000ae.json
orders/: models.py  routers.py  services.py
products/: models.py  routers.py  schemas.py  services.py
services/: base_service.py
users/: auth.py  dependencies.py  models.py  routers.py  schemas.py  services.py
volunteers/: models.py  routers.py  schemas.py  services.py
(+54 files in other folders)
